--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,17 @@
 ---
 # tasks file for ansible-role-active-directory/
+
+- name: "Include OS-specific variables"
+  include_vars: "{{ ansible_os_family }}.yml"
+
+- name: "Gather the package facts"
+  ansible.builtin.package_facts:
+    manager: auto
+  when: ansible_facts.packages is not defined
+
+- name: "Install required packages"
+  ansible.builtin.package:
+    name: "{{ item }}"
+    state: present
+    with_items: "{{ required_packages }}"
+
