--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,13 +1,10 @@
 ---
 sssd_daemon: sssd
+realmd_package: realmd
 required_packages:
   - sssd
-  - sssd-ad
-  - sssd-tools
-  - libnss-sss
-  - libpam-sss
   - realmd
   - adcli
-  - samba-common-bin
-  - sbmclient
-  - krb5-user
+  - samba-common-tools
+  - oddjob
+  - oddjob-mkhomedir
