--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: "Show Discovery"
   debug:
-    msg: "{{ (domain_discovery.stdout_lines | from_json).required-package }}"
+    msg: "{{ (domain_discovery.stdout_lines | list) }}"
 
 #- name: "Install required packages"
 #  ansible.builtin.package:
