--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,15 +16,15 @@
 
 - name: "Discover required packages to join Domain"
   shell: realm discover {{ domain }} | grep "required-package:" | awk '{ print $2}'
-  register: realmd_packages
+  register: required_packages
 
-- name: "Show Discovery"
-  debug:
-    msg: "{{ realmd_packages.stdout_lines }}"
+#- name: "Show Discovery"
+#  debug:
+#    msg: "{{ required_packages.stdout_lines }}"
 
-#- name: "Install required packages"
-#  ansible.builtin.package:
-#    name: "{{ item }}"
-#    state: present
-#    with_items: "{{ required_packages }}"
+- name: "Install packages from required_packages discovery"
+  ansible.builtin.package:
+    name: "{{ item }}"
+    state: present
+    with_items: "{{ required_packages.stdout_lines }}"
 
