--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,5 +26,5 @@
   ansible.builtin.package:
     name: "{{ item }}"
     state: present
-    with_items: "{{ required_packages.stdout_lines }}"
+    with_items: required_packages.stdout_lines
 
