--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,11 +26,11 @@
   ansible.builtin.set_fact:
     required_packages: "{{ required_packages.stdout_lines | list }}"
 
-- name: "Install packages from required_packages discovery"
-  ansible.builtin.package:
-    name: "{{ item }}"
-    state: present
-  with_items: "{{ required_packages }}"
+#- name: "Install packages from required_packages discovery"
+#  ansible.builtin.package:
+#    name: "{{ item }}"
+#    state: present
+#  with_items: "{{ required_packages }}"
 
 - name: "Check if machine is joined to the domain already"
   shell: realm -v list
