Code Cleanup and additional vars

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,4 +2,6 @@
   # defaults file for ansible-role-active-directory/
 
   domain: "example.com"
+  service_account: "myuser"
+  ou: "OU=Computers, DC=example, DC=com"
   
