--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,5 +3,6 @@
 
   domain: "example.com"
   service_account: "myuser"
+  service_password: "mypassword"
   ou: "OU=Computers, DC=example, DC=com"
   
