--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,13 +36,17 @@
   shell: realm -v list
   register: ad_check
 
-# https://access.redhat.com/solutions/5592351
-# Fully-Qualified Username must, the domain must be in CAPS
-- name: "Join host to the active directory domain"
-  shell: realm join -v -U {{ service_account }}@{{ domain.upper() }} --computer-ou='{{ ou }}' {{ domain }}
+- name: "Obtain Kerberos Ticket for Service Account"
+  shell: echo -n "{{ service_password }}" | kinit {{ service_account }}@{{ domain.upper() }}
   when: ad_check.stderr | length != 0
 
+# https://access.redhat.com/solutions/5592351
+# Fully-Qualified Username must, the domain must be in CAPS
+#- name: "Join host to the active directory domain"
+#  shell: echo -n "{{ service_password }}" |realm join -v -U {{ service_account }}@{{ domain.upper() }} --computer-ou='{{ ou }}' {{ domain }}
+#  when: ad_check.stderr | length != 0
+
 # https://ubuntu.com/server/docs/service-sssd
-- name: "Update pamd auth to create homedirs for new active directory users"
-  shell: pam-auth-update --enable mkhomedir
-  when: ad_check.stderr | length != 0
+#- name: "Update pamd auth to create homedirs for new active directory users"
+#  shell: pam-auth-update --enable mkhomedir
+#  when: ad_check.stderr | length != 0
