--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,7 @@
   register: ad_check
 
 - name: "Obtain Kerberos Ticket for Service Account"
-  shell: echo -n "{{ service_password }}" | kinit -i -k {{ service_account }}@{{ service_domain.upper() }}
+  shell: echo -n "{{ service_password }}" | kinit -k {{ service_account }}@{{ service_domain.upper() }}
   #when: ad_check.stderr | length != 0
 
 # https://access.redhat.com/solutions/5592351
