--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,3 +1,5 @@
 ---
-  realmd_package: realmd
-  krb_package: krb5-workstation
+realmd_package: realmd
+krb_package: krb5-workstation
+sssd_conf: /etc/sssd/sssd.conf
+sssd_service: sssd
