--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -90,7 +90,7 @@
 - name: "Add the appropriate AD Site to sshd_conf"
   ansible.builtin.lineinfile:
     path: "{{ sssd_conf }}"
-    regexp: '^\[domain\/{{ service_domain }}]'
+    regexp: '^ad_site'
     insertafter: '^\[domain\/{{ service_domain }}]'
     line: 'ad_site = {{ ad_site }}'
 
